It is invalid when both numberOfInputChannels and numberOfOutputChannels to be zero in JavaScriptAudioNode. https://bugs.webkit.org/show_bug.cgi?id=91364

Patch by Li Yin <li.yin@intel.com> on 2012-07-25
Reviewed by Kenneth Russell.

Source/WebCore:

Spec: http://www.w3.org/TR/webaudio/#JavaScriptAudioNode-section
It is invalid for both numberOfInputChannels and numberOfOutputChannels to be zero.

Test: webaudio/javascriptaudionode.html

* Modules/webaudio/JavaScriptAudioNode.cpp:
(WebCore::JavaScriptAudioNode::create):

LayoutTests:

Add tests for (numberOfInputChannels, numberOfOutputChannels) to be (0, 0),(0, 1),(0, 2),(1, 0) and (2, 0).

* webaudio/javascriptaudionode-expected.txt:
* webaudio/javascriptaudionode.html:

Canonical link: https://commits.webkit.org/110101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123662 268f45cc-cd09-0410-ab3c-d52691b4dbfc